# vnpy

./: .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  .spyderworkspace  .style.yapf  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  Q_n_A.md  README-en.md  README.md  README_ENG.md  README_origin.md  Readme.md  SGIT.ipynb  TB2VNPY.py  appveyor.yml  centos_setup.md  check.py  compile_ui.py  conda-environment.yml  init.bat  install.bat  install.sh  install_custom.bat  install_osx.sh  install_vnpy_with_conda.sh  macOS_CTP_install_readme.md  makefile  makefile.inc  mongod.cfg  pyproject.toml  rebuild.sh  requirements-dev.txt  requirements-optional.txt  (+19 more)
api/vn.ctp/: CMakeLists.txt
api/vn.ctp/pyscript/: ctp_md_define.cpp  ctp_td_header_process.h
binding/source/ctp/: CMakeLists.txt  class_generators.h  classes_1.cpp  classes_2.cpp  classes_3.cpp  classes_4.cpp  vnctp.cpp  vnctp.pyi  wrappers.hpp
binding/source/ctp/api/: thostmduserapi_se.lib
binding/source/ctp/custom_wrappers/: spi.hpp
vn.api/vn.ib/: CMakeLists.txt  README_en.md
vn.api/vn.ib/vnib/vnib/: vnib.vcxproj  vnib.vcxproj.filters
vn.ctp/: CMakeLists.txt  build.sh  readme.md
vn.ctp/ctpapi/: ThostFtdcTraderApi.h  ThostFtdcUserApiStruct.h  error.xml  thostmduserapi.lib  thosttraderapi.lib
vn.ctp/ctpapi/x64_linux/: ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h  error.xml
vn.ctp/py3/ctpapi/: md5.txt
vn.ctp/py3/pyscript/: ctp_md_process.cpp
vn.ctp/py3/vnctpmd/vnctpmd/: ReadMe.txt
vn.ctp/py3/vnctptd/vnctptd/: vnctptd.h
vn.ctp/pyscript/: ThostFtdcMdApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h  ctp_md_function.cpp  ctp_md_process.cpp  ctp_md_task.cpp  ctp_struct.py  ctp_td_define.cpp  ctp_td_function.cpp  ctp_td_header_function.h  ctp_td_header_on.h  ctp_td_header_process.h  ctp_td_process.cpp  ctp_td_switch.cpp  ctp_td_task.cpp  ctp_td_wrap.cpp  generate_data_type.py  generate_md_functions.py  generate_struct.py  generate_td_functions.py
vn.ctp/vnctpmd/Visual Studio 2013/settings/: Windows Azure Subscriptions.xml
vn.ctp/vnctpmd/test/: mdtest.py  vnctpmd.pyd
vn.ctp/vnctpmd/vnctpmd/: ReadMe.txt  dllmain.cpp  makefile  stdafx.cpp  vnctpmd.cpp  vnctpmd.h
vn.ctp/vnctptd/: vnctptd.sln
vn.ctp/vnctptd/Visual Studio 2013/settings/: Windows Azure Subscriptions.xml
vn.ctp/vnctptd/test/: vnctptd.pyd
vn.ctp/vnctptd/vnctptd/: ReadMe.txt  makefile  stdafx.cpp  vnctptd.cpp  vnctptd.h
vn.ib/: CMakeLists.txt  README.md  build.sh
vn.ib/ibapi/client/: DefaultEWrapper.cpp  DefaultEWrapper.h  EClient.cpp  EClient.h  EDecoder.cpp  EDecoder.h  EReader.cpp  EReaderOSSignal.h  EReaderWMSignal.cpp  EWrapper.h  MarginCondition.cpp  Order.h  TwsSocketClient.rc  TwsSocketClient.vcxproj  TwsSocketClient.vcxproj.filters  TwsSocketClientErrors.h  VolumeCondition.h  shared_ptr.h
vn.ib/ibapi/lib/: TwsSocketClient.lib
vn.ib/ibapi/ssl/: TwsSocketClientSSL.rc  TwsSocketClientSSL.vcxproj  TwsSocketClientSSL.vcxproj.filters
vn.ib/test/: test.py  vnib.pyd
vn.ib/vnib/vnib/: vnib.cpp  vnib.h  vnib.vcxproj  vnib.vcxproj.filters
vn.qdp/: .build.sh.swp  CMakeLists.txt  CMakeLists.txt~  readme.md
vn.qdp/pyscript/: .generate_td_functions.py.swp  QdpFtdcMduserApi.h  QdpFtdcUserApiStruct.h  qdp_data_type.py~  qdp_md_process.cpp  qdp_md_task.cpp  qdp_struct.py  qdp_td_header_process.h  qdp_td_process.cpp
vn.qdp/vnqdpmd/test/: vnqdpmd.pyd
vn.qdp/vnqdpmd/vnqdpmd/: vnqdpmd.cpp  vnqdpmd.h  vnqdpmd.vcxproj  vnqdpmd.vcxproj.filters
vn.qdp/vnqdptd/vnqdptd/: vnqdptd.cpp  vnqdptd.h  vnqdptd.vcxproj  vnqdptd.vcxproj.filters
vnpy/api/ctp/: CMakeLists.txt  __init__.py  build.sh  ctp_constant.py  ctp_data_type.py  readme.md  setup.py  vnctpmd.pyd  vnctptd.pyd
vnpy/api/da/: CMakeLists.txt  __init__.py  da_constant.py  vndafuture.lib  vndafuture.pyd  vndamarket.lib  vndamarket.pyd  vndastock.lib  vndastock.pyd
vnpy/api/da/vnda/: vnda.h  (+1 more)
vnpy/api/femas/: CMakeLists.txt  USTPtraderapiAF.lib  __init__.py  femas_constant.py  femas_data_type.py  vnfemasmd.lib  vnfemasmd.pyd  vnfemastd.lib  vnfemastd.pyd
vnpy/api/hft/: CMakeLists.txt  __init__.py  hft_constant.py  vnhfttd.lib  vnhfttd.pyd
vnpy/api/ihq/: CMakeLists.txt  __init__.py  ihq_constant.py  vnihqmd.lib  vnihqmd.pyd
vnpy/api/ksgold/: CMakeLists.txt  README.md  __init__.py  ksgold_constant.py  ksgold_data_type.py  vnksgoldmd.lib  vnksgoldmd.pyd  vnksgoldtd.lib  vnksgoldtd.pyd
vnpy/api/lts/: CMakeLists.txt  __init__.py  build.sh  lts_data_type.py  vnltsqry.pyd
vnpy/api/mini/: CMakeLists.txt  __init__.py  mini_constant.py  vnctpmd.pyd  vnctptd.pyd  vnminimd.pyd  vnminitd.lib  vnminitd.pyd
vnpy/api/nh/: CMakeLists.txt  __init__.py
vnpy/api/nst/: CMakeLists.txt  __init__.py  vnihqmd.pyd  vnnsttd.lib  vnnsttd.pyd
vnpy/api/oes/: .gitignore  CMakeLists.txt  __init__.py  generate_oes.sh  oes_constant.py  vnoes.pyd  vnoes.pyi  vnoes.sln  vnoesmd.lib  vnoesmd.pyd  vnoestd.lib  vnoestd.pyd
vnpy/api/sec/: CMakeLists.txt  Sec_constant.py  __init__.py  sec_data_type.py  vnsecmd.lib  vnsecmd.pyd  vnsectd.lib  vnsectd.pyd
vnpy/api/sgit/: CMakeLists.txt  __init__.py  sgit_data_type.py  vnsgitmd.lib  vnsgittd.lib
vnpy/api/sip/: CMakeLists.txt  __init__.py  sip_constant.py  vnsipmd.lib  vnsipmd.pyd
vnpy/api/sopt/: CMakeLists.txt  __init__.py  vnsoptmd.pyd  vnsopttd.pyd
vnpy/api/tap/: .gitignore  CMakeLists.txt  __init__.py  error_codes.py  generate_error_map.py  generate_tap.sh  tap_constant.py  vntap.lib  vntap.pyd  vntap.pyi  vntap.sln  vntap_ITapTrade.pyi  vntapmd.lib  vntapmd.pyd  vntaptd.lib  vntaptd.pyd
vnpy/api/uft/: CMakeLists.txt  __init__.py  vnuftmd.lib  vnuftmd.pyd  vnufttd.lib  vnufttd.pyd
vnpy/api/xgj/: CMakeLists.txt  __init__.py  vnxgjmd.lib  vnxgjmd.pyd  vnxgjtd.lib  vnxgjtd.pyd
vnpy/api/xtp/: .gitignore  CMakeLists.txt  XTP_dict.py  __init__.py  build.sh  generate_xtp.sh  readme.md  vnxtp.pyd  vnxtp.pyi  vnxtp.sln  vnxtp_XTP.pyi  vnxtp_XTP_API.pyi  vnxtpmd.lib  vnxtpmd.pyd  vnxtpquote.pyd  vnxtptd.lib  vnxtptd.pyd  vnxtptrader.pyd  xtp_constant.py  xtp_data_type.py
(+5179 files in other folders)
