# 指定 cmake 最低编译版本
CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

PROJECT (VNPY)

add_subdirectory(vnpy/api/ctp_alt/prd_6_3_19_P1)
add_subdirectory(vnpy/api/ctp_alt/test_6_3_19_T1)
add_subdirectory(vnpy/api/ctp)
add_subdirectory(vnpy/api/hft)

if(WIN32)
    add_subdirectory(vnpy/api/da)
    add_subdirectory(vnpy/api/femas)
    add_subdirectory(vnpy/api/ihq)
    add_subdirectory(vnpy/api/mini)
    add_subdirectory(vnpy/api/nst)
    # add_subdirectory(vnpy/api/oes)
    add_subdirectory(vnpy/api/sec)
    add_subdirectory(vnpy/api/sip)
    add_subdirectory(vnpy/api/sopt)
    add_subdirectory(vnpy/api/tap)
    add_subdirectory(vnpy/api/uft)
    add_subdirectory(vnpy/api/xgj)
    add_subdirectory(vnpy/api/xtp)
else()
    add_subdirectory(vnpy/api/nh)
    add_subdirectory(vnpy/api/sgit)
    add_subdirectory(vnpy/api/ksgold)
endif()
