# vn.py - By Traders, For Traders.

# The vn.py project is an open-source quantitative trading framework
# that is developed by traders, for traders.

# The project is mainly written in Python and uses C++ for low-layer
# and performance sensitive infrastructure.

# Using the vn.py project, institutional investors and professional
# traders, such as hedge funds, prop trading firms and investment banks,
# can easily develop complex trading strategies with the Event Engine
# Strategy Module, and automatically route their orders to the most
# desired destinations, including equity, commodity, forex and many
# other financial markets.


[metadata]
name = vnpy
version = attr: vnpy.__version__
url = https://www.vnpy.com
license = MIT
author = Xiaoyou Chen
author_email = xiaoyou.chen@mail.vnpy.com
description = A framework for developing quant trading systems.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: Darwin :: Macos
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Simplified)

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    tzlocal==2.0.0
    PySide6
    pyqtgraph
    qdarkstyle
    numpy
    pandas
    matplotlib
    seaborn
    ta-lib
    deap
    pyzmq
    plotly

[options.package_data]
* = *.dll, *.so, *.pyd
