[metadata]
name = vnpy
version = attr: vnpy.__version__
author = Xiaoyou Chen
author_email = xiaoyou.chen@mail.vnpy.com
description = A framework for developing quant trading systems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.vnpy.com
license = MIT
license_files = LICENSE
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Simplified)
project_urls =
	Documentation = https://www.vnpy.com/docs

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    tzlocal
    PySide6
    pyqtgraph
    qdarkstyle
    numpy
    pandas
    matplotlib
    seaborn
    ta-lib
    deap
    pyzmq
    plotly
    tqdm

[options.package_data]
* = *.dll, *.so, *.pyd
